@startuml

title __BACKEND's Class Diagram__\n

  namespace dhbw.online.bookly {
    class dhbw.online.bookly.SpringBootVuejsApplication {
    }
  }
  

  namespace dhbw.online.bookly {
    namespace configuration {
      class dhbw.online.bookly.configuration.WebSecurityConfiguration {
      }
    }
  }
  

  namespace dhbw.online.bookly {
    namespace controller {
      class dhbw.online.bookly.controller.BackendController {
      }
    }
  }
  

  namespace dhbw.online.bookly {
    namespace domain {
      class dhbw.online.bookly.domain.User {
      }
    }
  }
  

  namespace dhbw.online.bookly {
    namespace exception {
      class dhbw.online.bookly.exception.UserNotFoundException {
      }
    }
  }
  

  namespace dhbw.online.bookly {
    namespace repository {
      interface dhbw.online.bookly.repository.UserRepository {
      }
    }
  }
  

  dhbw.online.bookly.configuration.WebSecurityConfiguration -up-|> org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter
  dhbw.online.bookly.controller.BackendController o-- dhbw.online.bookly.repository.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
